--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -61,6 +61,7 @@
         android:layout_height="match_parent" />
     
     <Button
+        android:id="@+id/button_cancel"
         android:text="@string/cancel"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,6 +71,7 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:id="@+id/button_register"
         android:text="@string/register"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical_50"
