--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -110,9 +110,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/text_view_total_votes_label"
+        android:text="@string/total_votes"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/text_view_bad_votes_label"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/text_view_total_votes"
+        android:text="10"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/text_view_total_votes_label"
+        app:layout_constraintBottom_toBottomOf="@id/text_view_total_votes_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_horizontal_66"
-        app:layout_constraintGuide_percent="0.66"
+        android:id="@+id/guideline_horizontal_70"
+        app:layout_constraintGuide_percent="0.70"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -122,7 +144,7 @@
         android:text="@string/exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_66"
+        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_70"
         android:layout_marginTop="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
